--- a/MLITB/compile/build.xml
+++ b/MLITB/compile/build.xml
@@ -5,12 +5,14 @@
         <file name="mlitb_global_param.js"/>
         <file name="mlitb_util.js" />
         <file name="mlitb_container.js" />
+        <file name="mlitb_layer_input.js" />
         <file name="mlitb_layer_conv.js" />
         <file name="mlitb_layer_fullConn.js" />
         <file name="mlitb_layer_activation.js" />
         <file name="mlitb_layer_pooling.js" />
         <file name="mlitb_net.js" />
         <file name="mlitb_sgd.js" />
+        <file name="mlitb_trainer.js" />
         <file name="test.js" />
       </filelist>
     </concat>
