--- a/sgdjs/memdist/package.json
+++ b/sgdjs/memdist/package.json
@@ -12,6 +12,7 @@
     "express.io": "~1.1.13",
     "jade": "~1.3.1",
     "stylus": "~0.44.0",
-    "nib": "~1.0.2"
+    "nib": "~1.0.2",
+    "colors": "~0.6.2"
   }
 }
