--- a/thesis/package.json
+++ b/thesis/package.json
@@ -10,6 +10,7 @@
     "jade": "~1.3.1",
     "stylus": "~0.44.0",
     "nib": "~1.0.2",
-    "colors": "~0.6.2"
+    "colors": "~0.6.2",
+    "commander": "~2.3.0"
   }
 }
