--- a/MLITB/package.json
+++ b/MLITB/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "~1.9.2",
     "bower": "~1.3.12",
+    "commander": "^2.5.0",
     "ejs": "^1.0.0",
     "express": "~4.10.2",
     "grunt-cli": "^0.1.13",
