--- a/imagezip/package.json
+++ b/imagezip/package.json
@@ -1,7 +1,7 @@
 {
   "name": "imagezip",
-  "version": "0.0.0",
-  "description": "",
+  "version": "0.1.0",
+  "description": "Back-end for up- and downloading images in ZIP files",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,12 +9,13 @@
   "author": "",
   "license": "BSD",
   "dependencies": {
+    "body-parser": "~1.9.2",
+    "commander": "^2.5.0",
     "express": "~4.10.1",
     "formidable": "~1.0.15",
-    "jszip": "~2.4.0",
-    "redis": "~0.12.1",
     "jade": "~1.7.0",
-    "body-parser": "~1.9.2"
+    "jszip": "~2.4.0",
+    "redis": "~0.12.1"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
