--- a/MLITB/package.json
+++ b/MLITB/package.json
@@ -1,10 +1,16 @@
 {
   "name": "mlitb",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "Machine Learning in the Browser",
   "main": "app.js",
+  "homepage": "https://github.com/software-engineering-amsterdam/MLitB",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository" :
+  { 
+    "type" : "git",
+    "url" : "https://github.com/software-engineering-amsterdam/MLitB.git"
   },
   "author": "Remco Hendriks",
   "license": "MIT",
@@ -16,7 +22,8 @@
     "express": "~4.10.2",
     "grunt-cli": "^0.1.13",
     "jade": "~1.7.0",
-    "less": "~2.0.0"
+    "less": "~2.0.0",
+    "socket.io": "^1.2.1"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
